[LXC] Add functions to manage veth device pairs
This gives us the ability to create a veth pair so that we can move one
into the network namespace of an LXC container.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -64,6 +64,7 @@ CLIENT_SOURCES =						\
 		lxc_driver.c lxc_driver.h			\
 		lxc_conf.c lxc_conf.h				\
 		lxc_container.c lxc_container.h			\
+		veth.c veth.h			\
                 nodeinfo.h nodeinfo.c                           \
 		util.c util.h
 
