--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -9,6 +9,7 @@ src/libvirt.c
 src/lxc_conf.c
 src/lxc_container.c
 src/lxc_driver.c
+src/network_conf.c
 src/openvz_conf.c
 src/openvz_driver.c
 src/proxy_internal.c
