make distclean: remove generated source files
* src/Makefile.am (DISTCLEANFILES): Define to $(BUILT_SOURCES)
so "make distcheck" passes.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -189,3 +189,4 @@ install-exec-local:
 	$(MKDIR_P) $(DESTDIR)$(localstatedir)/cache/libvirt
 
 CLEANFILES = *.gcov .libs/*.gcda .libs/*.gcno *.gcno *.gcda
+DISTCLEANFILES = $(BUILT_SOURCES)
