Extend parser and add support for USB devices in QEmu/KVM * src/domain_conf.c src/domain_conf.h src/qemu_conf.c   src/qemu_driver.c: Patch from Guido Günther allowing to pass   usb devices to qemu/kvm * docs/libvirt.rng: add the new functionality to the grammar * tests/qemuxml2argvdata/qemuxml2argv-hostdev-usb-address.args   tests/qemuxml2argvdata/qemuxml2argv-hostdev-usb-address.xml   tests/qemuxml2argvdata/qemuxml2argv-hostdev-usb-product.args   tests/qemuxml2argvdata/qemuxml2argv-hostdev-usb-product.xml   tests/qemuxml2argvtest.c tests/qemuxml2xmltest.c: adding examples   to the regression tests * libvirt.spec.in: fix the licence tag Daniel

--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -29,7 +29,7 @@ Summary: Library providing a simple API virtualization
 Name: libvirt
 Version: @VERSION@
 Release: 1%{?dist}%{?extra_release}
-License: LGPL
+License: LGPLv2+
 Group: Development/Libraries
 Source: libvirt-%{version}.tar.gz
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
