Update LXC driver in POTFILES.in

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -7,8 +7,8 @@ src/domain_conf.c
 src/hash.c
 src/iptables.c
 src/libvirt.c
-src/lxc_conf.c
 src/lxc_container.c
+src/lxc_controller.c
 src/lxc_driver.c
 src/network_conf.c
 src/openvz_conf.c
