configure.in: link with -lpthread when necessary
* configure.in: Explicitly add -lpthread to $LIBS.
With an empty "ACTION_IF_FOUND", AC_CHECK_LIB would have done
that for us automatically, but when there is an explicit third
argument, those commands are run instead of the default.
Reported by Jun Koi <junkoi2004@gmail.com>.

--- a/configure.in
+++ b/configure.in
@@ -90,6 +90,7 @@ AC_CHECK_HEADER([pthread.h],
 	[AC_CHECK_LIB([pthread],[pthread_join],[
 		AC_DEFINE([HAVE_LIBPTHREAD],[],[Define if pthread (-lpthread)])
 		AC_DEFINE([HAVE_PTHREAD_H],[],[Define if <pthread.h>])
+		LIBS="-lpthread $LIBS"
 	])])
 
 dnl Miscellaneous external programs.
