--- a/libvirt.spec.in
+++ b/libvirt.spec.in
@@ -172,7 +172,7 @@ of recent versions of Linux (and other OSes).
            --with-init-script=redhat \
            --with-qemud-pid-file=%{_localstatedir}/run/libvirt_qemud.pid \
            --with-remote-file=%{_localstatedir}/run/libvirtd.pid
-make
+make %{?_smp_mflags}
 
 %install
 rm -fr %{buildroot}
